[package]
edition = "2021"
name = "github-batch-download"
authors = ["Michael Adams"]
version = "0.1.0"

[dependencies]
futures = "0.3.19"
git2 = "0.13.25"
linked_hash_set = "0.1.4"
log = "0.4.14"
octocrab = "*"
simple-logging = "2.0.2"
structopt = "0.3.25"
tokio = {version= "1.15.0", features=["full"]}
